--- a/app/src/main/res/layout/fragment_application_screen.xml
+++ b/app/src/main/res/layout/fragment_application_screen.xml
@@ -19,7 +19,6 @@
         android:id="@+id/your_requests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:text="@string/your_requests"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -27,7 +26,6 @@
     <ListView
         android:id="@+id/requests_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
