--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,8 +13,7 @@
         android:id="@+id/textView"
         android:layout_above="@+id/sign_in_button"
         android:layout_centerHorizontal="true"
-        android:autoText="false"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
     <Button
         android:layout_width="wrap_content"
