--- a/app/src/main/res/layout/fragment_new_request.xml
+++ b/app/src/main/res/layout/fragment_new_request.xml
@@ -9,7 +9,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Name"
+        android:hint="@string/name"
         android:id="@+id/add_request_name"
         android:layout_marginTop="92dp"
         android:layout_alignParentTop="true" />
@@ -17,7 +17,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Price"
+        android:hint="@string/price"
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/add_request_price"
