--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +41,6 @@
             android:hint="@string/first_name"
             android:textAlignment="center"
             android:layout_below="@+id/email_input"
-            android:layout_alignLeft="@+id/email_input"
             android:layout_alignStart="@+id/email_input" />
 
         <EditText
@@ -52,7 +51,6 @@
             android:hint="@string/last_name"
             android:textAlignment="center"
             android:layout_below="@+id/first_name_input"
-            android:layout_alignLeft="@+id/password_input"
             android:layout_alignStart="@+id/password_input" />
 
         <EditText
@@ -64,7 +62,6 @@
             android:hint="@string/prompt_password"
             android:textAlignment="center"
             android:layout_below="@+id/last_name_input"
-            android:layout_alignLeft="@+id/first_name_input"
             android:layout_alignStart="@+id/first_name_input" />
 
         <Button
