--- a/app/src/main/res/layout/list_item_request.xml
+++ b/app/src/main/res/layout/list_item_request.xml
@@ -6,4 +6,5 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingLeft="6dip"
+    android:paddingRight="6dip"
     android:textAppearance="?android:attr/textAppearanceLarge" />
