--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.gatech.objectsanddesign.shoppingwithfriends.RegisterActivity$PlaceholderFragment"
-    android:id="@+id/q">
+    android:id="@+id/fragment_register">
 
     <RelativeLayout
         android:layout_width="match_parent"
