Fixed setUp in NewSaleTest

--- a/app/src/main/res/values/strings_activity_navigation.xml
+++ b/app/src/main/res/values/strings_activity_navigation.xml
@@ -7,6 +7,7 @@
         <item>@string/add_request</item>
         <item>@string/add_sale</item>
         <item>@string/nearby_sales</item>
+        <item>@string/account</item>
         <item>@string/logout</item>
     </string-array>
 
