--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -6,6 +6,7 @@
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="action_forgot_password">Forgot Password?</string>
+    <string name="action_sign_in_facebook">Sign in with Facebook</string>
 
     <string name="error_invalid_email">This username  is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
